editando o main e finalizado o hero

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <p class="destaque">novidade</p>
                         <h2 class="titulo-hero">Encontre a <span>receita perfeita!</span></h2>
                         <hr>
-                        <p class="hero-subti">Explore dezenas de variações da bebida favorida entre os devs ao redor do mundo!</p>
+                        <p class="subti">Explore dezenas de variações da bebida favorida entre os devs ao redor do mundo!</p>
                     </div><!-- txt-hero -->
 
                     <div class="img-hero">
@@ -59,26 +59,53 @@
         </div><!-- background -->
         <section class="receita">
             <div class="bnt-hero">
-                <i class="bi bi-chevron-double-down"></i>
+                <a href="#"><i class="bi bi-chevron-double-down"></i></a>
             </div><!-- bnt-hero -->
             <section class="coment">
-                <p>receitas</p>
-                <h3>Confira as últimas receitas</h3>
-                <p>Dê uma olhada nas receitas mais amadas!</p>
-                <div class="avaliacao">
-                    <p class="status-coment">em alta</p>
-                    <h4  class="titulo-coment">Cappuccino</h4>
-                    <p class="coment">Uma bebida ideial para os amantes de doce e cremosidade</p>
-                    <img src="imagens/Avatar.png">
-                    <p class="usuario-coment">Rafaela Ballerine</p>
-                </div><!-- avaliacao -->
+                <div class="hat">
+                    <p class="destaque">receitas</p>
+                    <h3 class="coment-subti">Confira as últimas receitas</h3>
+                    <p class="subti">Dê uma olhada nas receitas mais amadas!</p>
+                </div><!-- hat -->
+                <div class="coteiner">
+                    <div class="avaliacao">
+                        <p class="status-coment">em alta</p>
+                        <h4  class="titulo-coment">Cappuccino</h4>
+                        <p class="coment">Uma bebida ideial para os amantes de doce e cremosidade</p>
+                        <img src="imagens/Avatar.png">
+                        <p class="usuario-coment">Rafaela Ballerine</p>
+                    </div><!-- avaliacao -->
+                    <div class="avaliacao">
+                        <p class="status-coment">em alta</p>
+                        <h4  class="titulo-coment">Cappuccino</h4>
+                        <p class="coment">Uma bebida ideial para os amantes de doce e cremosidade</p>
+                        <img src="imagens/Avatar.png">
+                        <p class="usuario-coment">Rafaela Ballerine</p>
+                    </div><!-- avaliacao -->
+                    <div class="avaliacao">
+                        <p class="status-coment">em alta</p>
+                        <h4  class="titulo-coment">Cappuccino</h4>
+                        <p class="coment">Uma bebida ideial para os amantes de doce e cremosidade</p>
+                        <img src="imagens/Avatar.png">
+                        <p class="usuario-coment">Rafaela Ballerine</p>
+                    </div><!-- avaliacao -->
+                    <div class="avaliacao">
+                        <p class="status-coment">em alta</p>
+                        <h4  class="titulo-coment">Cappuccino</h4>
+                        <p class="coment">Uma bebida ideial para os amantes de doce e cremosidade</p>
+                        <img src="imagens/Avatar.png">
+                        <p class="usuario-coment">Rafaela Ballerine</p>
+                    </div><!-- avaliacao -->
+                </div><!-- coteiner -->
             </section><!-- comentarios -->
             <p class="mais-receitas">Carregar mais receitas...</p>
         </section>
     </main>
     <footer>
-        <p>Copyright &lt;CODEFEE /&gt; 2023</p>
-        <p>Feito com muito ❤ e café por Rafaella Ballerini</p>
+        <div class="rodape">
+            <p>Copyright &lt;CODEFEE /&gt; 2023</p>
+            <p class="opacity">Feito com muito ❤ e café por <a href="#">Rafaella Ballerini</a></p>
+        </div>
     </footer>
 </body>
 </html>
