refazendo ajuste na landing-page

--- a/index.html
+++ b/index.html
@@ -9,103 +9,79 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <header>
-        <h1 class="Logo">
-            <a href="#">BalleCoffe</a>
-        </h1>
+   <header>
         <nav>
+            <span class="logo"><a href="#">ballecoffe</a></span>
             <ul class="menu">
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Receitas</a>
-                </li>
-                <li>
-                    <a href="#">Novidades</a>
-                </li>
-                <li>
-                    <a href="#">Melhor avaliados</a>
-                </li>
-            </ul><!-- menu -->
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Receitas</a></li>
+                <li><a href="#">Novidades</a></li>
+                <li><a href="#">Melhor avaliados</a></li>
+            </ul>
+            <a href="#" class="github">Github</a>
         </nav>
-        <p class="github"><a href="#">Github</a></p>
-    </header>
-    <main>
-        <div class="background">
+   </header>
+ 
+   <main>
+        <div class="principal">
             <section class="hero">
-                    <div class="txt-hero">
-                        <p class="destaque">novidade</p>
-                        <h2 class="titulo-hero">Encontre a <span>receita perfeita!</span></h2>
-                        <hr>
-                        <p class="subti">Explore dezenas de variações da bebida favorida entre os devs ao redor do mundo!</p>
-                    </div><!-- txt-hero -->
-
-                    <div class="img-hero">
-                        <figure><img src="imagens/image 10-1.png"></figure>
-                        <figure><img src="imagens/image 10.png"></figure>
-                        <figure><img src="imagens/image 11.png"></figure>
-                        <figure><img src="imagens/image 14-1.png"></figure>
-                        <figure><img src="imagens/image 12.png"></figure>
-                        <figure><img src="imagens/image 12-1.png"></figure>
-                        <figure><img src="imagens/image 13.png"></figure>
-                        <figure><img src="imagens/image 17.png"></figure>
-                        <figure><img src="imagens/image 14.png"></figure>
-                        <figure><img src="imagens/image 15.png"></figure>
-                        <figure><img src="imagens/image 16.png"></figure>
-                        <figure><img src="imagens/image 18.png"></figure>
-                    </div><!-- img-hero -->
+                <header class="hero-conteudo">
+                    <span class="destaque marrom">novidades</span>
+                    <h1>Encontra a receita perfeita!</h1>
+                    <hr>
+                    <h2 class="hero-subtitulo">Explore dezenas de variações da bebida favorida entre os devs ao redor do mundo!</h2>
+                </header><!-- hero-conteudo -->
+                <div class="hero-img-conteiner">
+                    <figure><img src="imagens/image 9.png"></figure>
+                    <figure><img src="imagens/image 10.png"></figure>
+                    <figure><img src="imagens/image 11.png"></figure>
+                    <figure><img src="imagens/image 12.png"></figure>
+                    <figure><img src="imagens/image 13.png"></figure>
+                    <figure><img src="imagens/image 14.png"></figure>
+                    <figure><img src="imagens/image 15.png"></figure>
+                    <figure><img src="imagens/image 16.png"></figure>
+                    <figure><img src="imagens/image 17.png"></figure>
+                    <figure><img src="imagens/image 18.png"></figure>
+                    <figure><img src="imagens/image 19.png"></figure>
+                    <figure><img src="imagens/image 20.png"></figure>
+                </div><!-- hero-img-conteiner -->
             </section><!-- hero -->
-        </div><!-- background -->
-        <section class="receita">
-            <div class="bnt-hero">
-                <a href="#"><i class="bi bi-chevron-double-down"></i></a>
-            </div><!-- bnt-hero -->
-            <section class="coment">
-                <div class="hat">
-                    <p class="destaque">receitas</p>
-                    <h3 class="coment-subti">Confira as últimas receitas</h3>
-                    <p class="subti">Dê uma olhada nas receitas mais amadas!</p>
-                </div><!-- hat -->
-                <div class="coteiner">
-                    <div class="avaliacao">
-                        <p class="status-coment">em alta</p>
-                        <h4  class="titulo-coment">Cappuccino</h4>
-                        <p class="coment">Uma bebida ideial para os amantes de doce e cremosidade</p>
+        </div><!-- principal -->
+
+        <section class="btn-conteiner">
+            <button type="button">
+                <i class="bi bi-chevron-double-down"></i>
+            </button>
+        </section><!-- btn-conteiner -->
+        
+        <section class="receitas">
+            <header class="header-receitas">
+                <span class="destaque marrom">receitas</span>
+                <h2 class="receitas-titulos">Confira as últimas receitas</h2>
+                <p class="receitas-subtitulos">Dê uma olhada nas receitas mais amadas!</p>
+            </header>
+            <div class="receitas-card-conteiner">
+                <div class="receitas-card">
+                    <header class="receitas-card-header">
+                        <div class="receitas-card-header-detalhes">
+                            <span class="destaque amarelo">em alta 🔥</span>
+                            <h3 class="receita-titulo">Cappuccino</h3>
+                        </div><!-- receitas-card-header-detalhes -->
+                        <p class="receitas-avaliacao">Extraordinário · 4/4 </p>
+                    </header><!-- receitas-card-header -->
+                    <p class="receita-descricao">Uma bebida ideal para os amantes de doce e cremosidade. 😍</p>
+                    <div class="receita-autor">
                         <img src="imagens/Avatar.png">
-                        <p class="usuario-coment">Rafaela Ballerine</p>
-                    </div><!-- avaliacao -->
-                    <div class="avaliacao">
-                        <p class="status-coment">em alta</p>
-                        <h4  class="titulo-coment">Cappuccino</h4>
-                        <p class="coment">Uma bebida ideial para os amantes de doce e cremosidade</p>
-                        <img src="imagens/Avatar.png">
-                        <p class="usuario-coment">Rafaela Ballerine</p>
-                    </div><!-- avaliacao -->
-                    <div class="avaliacao">
-                        <p class="status-coment">em alta</p>
-                        <h4  class="titulo-coment">Cappuccino</h4>
-                        <p class="coment">Uma bebida ideial para os amantes de doce e cremosidade</p>
-                        <img src="imagens/Avatar.png">
-                        <p class="usuario-coment">Rafaela Ballerine</p>
-                    </div><!-- avaliacao -->
-                    <div class="avaliacao">
-                        <p class="status-coment">em alta</p>
-                        <h4  class="titulo-coment">Cappuccino</h4>
-                        <p class="coment">Uma bebida ideial para os amantes de doce e cremosidade</p>
-                        <img src="imagens/Avatar.png">
-                        <p class="usuario-coment">Rafaela Ballerine</p>
-                    </div><!-- avaliacao -->
-                </div><!-- coteiner -->
-            </section><!-- comentarios -->
-            <p class="mais-receitas">Carregar mais receitas...</p>
+                        <span class="receita-autor-nome">Rafaella Ballerini</span>
+                    </div><!-- receita-autor -->
+                </div><!-- receitas-card -->
+            </div><!-- receitas-card-conteiner -->
         </section>
-    </main>
-    <footer>
-        <div class="rodape">
-            <p>Copyright &lt;CODEFEE /&gt; 2023</p>
-            <p class="opacity">Feito com muito ❤ e café por <a href="#">Rafaella Ballerini</a></p>
-        </div>
-    </footer>
+   </main>
+
+   <footer>
+        <p class="footer-copy">Copyright &lt;CODEFEE /&gt;  2023</p>
+        <p class="footer-autor">Feito com muito ❤ e café por Rafaella Ballerini</p>
+   </footer>
 </body>
 </html>
